cmake_minimum_required(VERSION 3.6)

project(mars_comm C CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSING_XLOG_WEAK_FUNC -Wno-error=strict-aliasing")

if (NOT ENABLE_ANDROID_SUPPORT)
    find_package(JNI REQUIRED)
    include_directories(
            ${JAVA_INCLUDE_PATH}
    )
endif ()

file(GLOB_RECURSE COMM_INCLUDE_FILES ./*.h)

file(GLOB_RECURSE UWP_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./UWP/*.h*)
list(REMOVE_ITEM COMM_INCLUDE_FILES UWP_INCLUDE_FILES)

if (NOT ENABLE_ANDROID_SUPPORT)
    file(GLOB_RECURSE ANDROID_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./android/*.h*)
    list(REMOVE_ITEM COMM_INCLUDE_FILES ${ANDROID_INCLUDE_FILES})

    file(GLOB_RECURSE JNI_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./jni/*.h*)
    list(REMOVE_ITEM COMM_INCLUDE_FILES ${JNI_INCLUDE_FILES})
endif ()

file(GLOB_RECURSE WINDOW_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./windows/*.h*)
list(REMOVE_ITEM COMM_INCLUDE_FILES ${WINDOW_INCLUDE_FILES})

file(GLOB_RECURSE PATTERN_TEST_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./corepattern/test/*.h*)
list(REMOVE_ITEM COMM_INCLUDE_FILES ${PATTERN_TEST_INCLUDE_FILES})

if (ENABLE_ANDROID_SUPPORT)
    file(GLOB_RECURSE DEBUGGER_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./debugger/*.h*)
    list(REMOVE_ITEM COMM_INCLUDE_FILES ${DEBUGGER_INCLUDE_FILES})


    file(GLOB_RECURSE XLOGGER_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/./xlogger/*.h*)
    list(REMOVE_ITEM COMM_INCLUDE_FILES ${XLOGGER_INCLUDE_FILES})
endif ()

include_directories(COMM_INCLUDE_FILES)
include_directories(..)
include_directories(../..)
include_directories(.)


file(GLOB_RECURSE SRC_LIST ./*.c*)

file(GLOB_RECURSE UWP_SRC_FILES ${PROJECT_SOURCE_DIR}/./UWP/*.c*)
list(REMOVE_ITEM SRC_LIST UWP_SRC_FILES)

if (NOT ENABLE_ANDROID_SUPPORT)
    file(GLOB_RECURSE ANDROID_SRC_FILES ${PROJECT_SOURCE_DIR}/./android/*.c*)
    list(REMOVE_ITEM SRC_LIST ${ANDROID_SRC_FILES})

    file(GLOB_RECURSE JNI_SRC_FILES ${PROJECT_SOURCE_DIR}/./jni/*.c*)
    list(REMOVE_ITEM SRC_LIST ${JNI_SRC_FILES})

    file(GLOB_RECURSE DNSSVRADDRS_SRC_FILES ${PROJECT_SOURCE_DIR}/./network/getdnssvraddrs.cc)
    list(REMOVE_ITEM SRC_LIST ${DNSSVRADDRS_SRC_FILES})
endif ()

file(GLOB_RECURSE WINDOW_SRC_FILES ${PROJECT_SOURCE_DIR}/./windows/*.c*)
list(REMOVE_ITEM SRC_LIST ${WINDOW_SRC_FILES})

file(GLOB_RECURSE PATTERN_TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/./corepattern/test/*.c*)
list(REMOVE_ITEM SRC_LIST ${PATTERN_TEST_SRC_FILES})
list(REMOVE_ITEM SRC_LIST ${PROJECT_SOURCE_DIR}/./test_case/MessageQueue_test.cpp)

file(GLOB_RECURSE UNIX_THREAD_TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/./unix/thread/*.c*)
list(REMOVE_ITEM SRC_LIST ${UNIX_THREAD_TEST_SRC_FILES})

file(GLOB_RECURSE COMM_TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/./*.test*)
list(REMOVE_ITEM SRC_LIST ${COMM_TEST_SRC_FILES})

file(GLOB_RECURSE THREAD_TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/./thread/*.c*)
list(REMOVE_ITEM SRC_LIST ${THREAD_TEST_SRC_FILES})

if (ENABLE_ANDROID_SUPPORT)
    file(GLOB_RECURSE DEBUGGER_SRC_FILES ${PROJECT_SOURCE_DIR}/./debugger/*.c*)
    list(REMOVE_ITEM SRC_LIST ${DEBUGGER_SRC_FILES})

    #Android平台直接使用已编译好的xlog，这里去掉重复的源文件
    file(GLOB_RECURSE XLOGGER_SRC_FILES ${PROJECT_SOURCE_DIR}/./xlogger/*.c*)
    list(REMOVE_ITEM SRC_LIST ${XLOGGER_SRC_FILES})
endif ()

add_library(mars_comm OBJECT ${SRC_LIST})
set_target_properties(mars_comm PROPERTIES POSITION_INDEPENDENT_CODE ON)